--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body
     color: #333;
     text-align: center;
     font-family: Arial;
-    font-size: 16%;
+    font-size: 16px;
     margin: 0%;
     padding: 0%;
 }
@@ -17,5 +17,5 @@ body
 }
 #container h1
 {
-    font-size: 20%;
+    font-size: 20px;
 }
